# clips6

./: .gitignore  60.md  CMakeLists.txt  FACTS.md  INSTALL.md  MANIFEST.in  MODULES-AN.md  MODULES-ARCH.md  MODULES-CMAKE.md  MODULES.md  README.md  README.txt  setup.py
clipssrc/: CMakeLists.txt
clipssrc/src/: .#filecom.c  CMakeLists.txt  Makefile  evaluatn.c  setup.h
cmake/: clips6.cmake
documents/: CLIPS6.md  CLIPS6_1.md  MODULE-CA.md  MODULES-PACKAGE.md  README.md  clips6.html
etc/ca/: clips6.crt  clips6.csr  clips6.key
include/: CLPmod.pxd  clips6_constants.pyi  clips6_exceptions.pyi  clips6_structs.pyi  clips6library.pyi
modules/dummy/: CMakeLists.txt  dummy.c  dummy.h  dummy.pyx
modules/dummy_package/: CMakeLists.txt  dummy_package.module  dummy_package.pyx
modules/dummy_package/documentation/: README.md
modules/dummy_package/facts/: dummy.fact
modules/dummy_package/manifest/: module.manifest
modules/dummy_package/rules/: dummy.clp
modules/example/: CMakeLists.txt  example.clp  example.module  example.pyx
modules/require/: CMakeLists.txt  require.pyx
modules/require/example/: example0.py
modules/testmodule/: CMakeLists.txt  testmod.pyx
src/: CLPmod.pxd  CMakeLists.txt  clips6.c  clips6.pyx  clips6_bufrouters.pyx  clips6_build_defaults.pyx  clips6_cmd.pyx  clips6_cmd_static.h  clips6_crypto.pyx  clips6_dl.c  clips6_dynlib.pyx  clips6_env.pyx  clips6_f.c  clips6_f.h  clips6_facts.pyx  clips6_imp.pyx  clips6_io.c  clips6_io.h  clips6_lib.pyx  clips6_modldr.pyx  clips6_module.pyx  clips6_package.pyx  clips6_pkg.pyx  clips6_shell.pyx  clips6_version.pyx  clips_definitions.pyx  clp2py.pyx  userfun.pyx
src/clips/: test1.clp
src/examples/: test0.py  test1.py  test2.py
testsuite/: test_clips6.py  test_clips6_env.py  test_clips6_extfun.py
